# CSOPESY_MCO

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CSOPESY_Emulator/: CSOPESY_Emulator.sln  Config.h  ConsoleManager.cpp  ConsoleManager.h  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h  config.txt  configs_options.txt  csopesy-log.txt  main.cpp
CSOPESY_Emulator/CSOPESY_Emulator/: CSOPESY_Emulator.vcxproj  CSOPESY_Emulator.vcxproj.filters  main.cpp
Semi-MO - Desktop-Style OS Mockup/: AppWindow1.cpp  AppWindow1.h  AppWindow2.cpp  AppWindow2.h  Bootloader.cpp  Bootloader.h  CMakeLists.txt  CMakeSettings.json  Desktop.cpp  Desktop.h  Semi-MO - Desktop-Style OS Mockup.sln  Taskbar.cpp  Taskbar.h  main.cpp
Semi-MO - Desktop-Style OS Mockup/Semi-MO - Desktop-Style OS Mockup/: Semi-MO - Desktop-Style OS Mockup.vcxproj  Semi-MO - Desktop-Style OS Mockup.vcxproj.filters
